<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Top log display (scrollable later) -->
    <TextView
        android:id="@+id/logDisplayTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:layout_marginTop="16dp"
        android:scrollbars="vertical"
        android:maxLines="5"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Exercise row -->
    <TextView
        android:id="@+id/exerciseLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercise"
        android:textSize="20sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logDisplayTextView" />

    <EditText
        android:id="@+id/exerciseInputEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:hint="@string/enter_an_exercise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/exerciseLabelTextView"
        app:layout_constraintTop_toTopOf="@id/exerciseLabelTextView" />

    <!-- Weight row -->
    <TextView
        android:id="@+id/weightLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:textSize="20sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exerciseInputEditText" />

    <EditText
        android:id="@+id/weightInputEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:hint="@string/enter_a_weight"
        android:inputType="number|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/weightLabelTextView"
        app:layout_constraintTop_toTopOf="@id/weightLabelTextView" />

    <!-- Reps row -->
    <TextView
        android:id="@+id/repLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reps"
        android:textSize="20sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weightInputEditText" />

    <EditText
        android:id="@+id/repInputEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_reps"
        android:inputType="number"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/repLabelTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/repLabelTextView" />

    <!-- Log button -->
    <Button
        android:id="@+id/logButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/log"
        android:textSize="24sp"
        android:layout_marginTop="32dp"
        android:padding="24dp"
        app:layout_constraintTop_toBottomOf="@id/repInputEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
